# nand2tetris

./: .gitignore  LICENSE  README.md
02/: ALU.hdl  Add16.hdl
05/: CPU.hdl  Computer.hdl  Memory.hdl
06_assembler/: README.md  main.cpp  makefile  parser.cpp  parser.hpp  symboltable.hpp  test.cpp
07/MemoryAccess/BasicTest/: BasicTest.asm
07_08_vm_translator/: README.md  main.cpp  makefile  parser.cpp  parser.hpp  translator.cpp  translator.hpp
10_11_compiler/: .gitignore  README.md  TODO.md  pyproject.toml
10_11_compiler/jack_compiler/: cli.py  fs_utils.py  jack_parser.py  symbol_table.py  tokenizer.py  vm_writer.py
10_11_compiler/tests/: test_fs_utils.py  test_parser.py  test_tokenizer.py
10_11_compiler/tests/tokenizer/: comments.jack  identifiers.jack  integers.jack  strings.jack
assembler/: PSEUDO.txt  main.cpp  makefile  parser.cpp  parser.hpp  parser.test.cpp  symboltable.cpp  symboltable.hpp  symboltable2.cpp  symboltable2.hpp  test.cpp
compiler/: .gitignore  CMakeLists.txt  README.md  fs_utils.cpp  fs_utils.hpp  main.cpp  makefile  pyproject.toml  test.cpp
compiler/include/: fs_utils.hpp  lexer.hpp  node.hpp  parser.hpp  tokenizer.hpp
compiler/jack_compiler/: cli.py  fs_utils.py  lexer.py  tokenizer.py
compiler/src/: CMakeLists.txt  fs_utils.cpp  lexer.cpp  main.cpp  node.cpp  parser.cpp  tokenizer.cpp
compiler/test/: CMakeLists.txt  LexerTest.jack  Main.jack  TokenizerTest.jack  fs_utils.test.cpp  lexer.test.cpp  parser.test.cpp  tokenizer.test.cpp
compiler/tests/: test_fs_utils.py  test_tokenizer_tokenizeFile.py
compiler/tests/tokenizer/: comments.jack  identifiers.jack  integers.jack
vm_translator/: PointerTest.asm  README.md  SimpleAdd.asm  StackTest.asm  StaticTest.asm  main.cpp  makefile  parser.cpp  parser.hpp  test.cpp  translator.cpp  translator.hpp
