[tool.poetry]
name = "jack-compiler"
version = "0.1.0"
description = "A basic Jack compiler"
authors = ["Jordan Schneidler <jordan.schneidler@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JSchneidler/nand2tetris"
repository = "https://github.com/JSchneidler/nand2tetris"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
