cmake_minimum_required(VERSION 3.11...3.20)

add_library(Jack-Compiler fs_utils.cpp lexer.cpp parser.cpp)
target_compile_features(Jack-Compiler PRIVATE cxx_std_20)
if (MSVC)
    target_compile_options(Jack-Compiler PRIVATE ${MSVC_WARNING_FLAGS})
else()
    target_compile_options(Jack-Compiler PRIVATE ${GCC_WARNING_FLAGS})
endif()
target_include_directories(Jack-Compiler PRIVATE ${Boost_INCLUDE_DIRS} PUBLIC ../include)

add_executable(JackC main.cpp)
target_compile_features(JackC PRIVATE cxx_std_20)
if (MSVC)
    target_compile_options(JackC PRIVATE ${MSVC_WARNING_FLAGS})
else()
    target_compile_options(JackC PRIVATE ${GCC_WARNING_FLAGS})
endif()
target_link_libraries(JackC PRIVATE Jack-Compiler)