cmake_minimum_required(VERSION 3.11...3.20)

configure_file(Main.jack test/Main.jack COPYONLY)
configure_file(Main.xml test/Main.xml COPYONLY)
configure_file(MainT.xml test/MainT.xml COPYONLY)

add_executable(fsUtilsTests fs_utils.test.cpp ../src/fs_utils.cpp)
target_compile_features(fsUtilsTests PRIVATE cxx_std_20)
if (MSVC)
    target_compile_options(fsUtilsTests PRIVATE ${MSVC_WARNING_FLAGS})
else()
    target_compile_options(fsUtilsTests PRIVATE ${GCC_WARNING_FLAGS})
endif()
target_include_directories(fsUtilsTests PRIVATE ${Boost_INCLUDE_DIRS} ../include)
add_test(fsUtils fsUtilsTests)

add_executable(tokenizerTests tokenizer.test.cpp ../src/tokenizer.cpp)
target_compile_features(tokenizerTests PRIVATE cxx_std_20)
if (MSVC)
    target_compile_options(tokenizerTests PRIVATE ${MSVC_WARNING_FLAGS})
else()
    target_compile_options(tokenizerTests PRIVATE ${GCC_WARNING_FLAGS})
endif()
target_include_directories(tokenizerTests PRIVATE ${Boost_INCLUDE_DIRS} ../include)
add_test(tokenizer tokenizerTests)