cmake_minimum_required(VERSION 3.11...3.20)

configure_file(Main.jack test/Main.jack COPYONLY)
configure_file(Main.xml test/Main.xml COPYONLY)
configure_file(MainTokens.xml test/MainTokens.xml COPYONLY)
configure_file(LexerTest.jack test/LexerTest.jack COPYONLY)

add_executable(fsUtilsTests fs_utils.test.cpp ../src/fs_utils.cpp)
target_compile_features(fsUtilsTests PRIVATE cxx_std_20)
if (MSVC)
    target_compile_options(fsUtilsTests PRIVATE ${MSVC_WARNING_FLAGS})
else()
    target_compile_options(fsUtilsTests PRIVATE ${GCC_WARNING_FLAGS})
endif()
target_include_directories(fsUtilsTests PRIVATE ${Boost_INCLUDE_DIRS} ../include)
add_test(fsUtils fsUtilsTests)

add_executable(lexerTests lexer.test.cpp ../src/node.cpp ../src/lexer.cpp)
target_compile_features(lexerTests PRIVATE cxx_std_20)
if (MSVC)
    target_compile_options(lexerTests PRIVATE ${MSVC_WARNING_FLAGS})
else()
    target_compile_options(lexerTests PRIVATE ${GCC_WARNING_FLAGS})
endif()
target_include_directories(lexerTests PRIVATE ${Boost_INCLUDE_DIRS} ../include)
add_test(lexer lexerTests)

add_executable(parserTests parser.test.cpp ../src/node.cpp ../src/parser.cpp ../src/lexer.cpp)
target_compile_features(parserTests PRIVATE cxx_std_20)
if (MSVC)
    target_compile_options(parserTests PRIVATE ${MSVC_WARNING_FLAGS})
else()
    target_compile_options(parserTests PRIVATE ${GCC_WARNING_FLAGS})
endif()
target_include_directories(parserTests PRIVATE ${Boost_INCLUDE_DIRS} ../include)
add_test(parser parserTests)